--- a/sutfftosend/GT_lines.ipynb
+++ b/sutfftosend/GT_lines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,12 @@
     "import math\n",
     "import csv\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "from SplitAndMerge import Algorithm_split_and_merge"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,333 +291,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>2118</th>\n",
-       "      <th>2119</th>\n",
-       "      <th>2120</th>\n",
-       "      <th>2121</th>\n",
-       "      <th>2122</th>\n",
-       "      <th>2123</th>\n",
-       "      <th>2124</th>\n",
-       "      <th>2125</th>\n",
-       "      <th>2126</th>\n",
-       "      <th>2127</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Rho</th>\n",
-       "      <td>4.568000</td>\n",
-       "      <td>4.568000</td>\n",
-       "      <td>4.568000</td>\n",
-       "      <td>4.568000</td>\n",
-       "      <td>4.568000</td>\n",
-       "      <td>4.568000</td>\n",
-       "      <td>4.568000</td>\n",
-       "      <td>4.576000</td>\n",
-       "      <td>4.576000</td>\n",
-       "      <td>4.576000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.605555</td>\n",
-       "      <td>4.611291</td>\n",
-       "      <td>4.617021</td>\n",
-       "      <td>4.614935</td>\n",
-       "      <td>4.620654</td>\n",
-       "      <td>4.626367</td>\n",
-       "      <td>4.632074</td>\n",
-       "      <td>4.637775</td>\n",
-       "      <td>4.643470</td>\n",
-       "      <td>4.649159</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Alpha</th>\n",
-       "      <td>0.005807</td>\n",
-       "      <td>0.011614</td>\n",
-       "      <td>0.017421</td>\n",
-       "      <td>0.023228</td>\n",
-       "      <td>0.029035</td>\n",
-       "      <td>0.034842</td>\n",
-       "      <td>0.040649</td>\n",
-       "      <td>0.046456</td>\n",
-       "      <td>0.052263</td>\n",
-       "      <td>0.058070</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.154509</td>\n",
-       "      <td>0.160118</td>\n",
-       "      <td>0.165721</td>\n",
-       "      <td>0.171692</td>\n",
-       "      <td>0.177281</td>\n",
-       "      <td>0.182863</td>\n",
-       "      <td>0.188438</td>\n",
-       "      <td>0.194007</td>\n",
-       "      <td>0.199569</td>\n",
-       "      <td>0.205125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>X</th>\n",
-       "      <td>4.567923</td>\n",
-       "      <td>4.567692</td>\n",
-       "      <td>4.567307</td>\n",
-       "      <td>4.566768</td>\n",
-       "      <td>4.566075</td>\n",
-       "      <td>4.565227</td>\n",
-       "      <td>4.564226</td>\n",
-       "      <td>4.571063</td>\n",
-       "      <td>4.569752</td>\n",
-       "      <td>4.568287</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.550691</td>\n",
-       "      <td>4.552305</td>\n",
-       "      <td>4.553766</td>\n",
-       "      <td>4.547082</td>\n",
-       "      <td>4.548234</td>\n",
-       "      <td>4.549232</td>\n",
-       "      <td>4.550077</td>\n",
-       "      <td>4.550769</td>\n",
-       "      <td>4.551307</td>\n",
-       "      <td>4.551691</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Y</th>\n",
-       "      <td>0.026526</td>\n",
-       "      <td>0.053051</td>\n",
-       "      <td>0.079575</td>\n",
-       "      <td>0.106096</td>\n",
-       "      <td>0.132613</td>\n",
-       "      <td>0.159126</td>\n",
-       "      <td>0.185633</td>\n",
-       "      <td>0.212505</td>\n",
-       "      <td>0.239046</td>\n",
-       "      <td>0.265578</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.708771</td>\n",
-       "      <td>0.735201</td>\n",
-       "      <td>0.761641</td>\n",
-       "      <td>0.788460</td>\n",
-       "      <td>0.814868</td>\n",
-       "      <td>0.841283</td>\n",
-       "      <td>0.867703</td>\n",
-       "      <td>0.894127</td>\n",
-       "      <td>0.920555</td>\n",
-       "      <td>0.946985</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4 rows × 2128 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           0         1         2         3         4         5         6     \\\n",
-       "Rho    4.568000  4.568000  4.568000  4.568000  4.568000  4.568000  4.568000   \n",
-       "Alpha  0.005807  0.011614  0.017421  0.023228  0.029035  0.034842  0.040649   \n",
-       "X      4.567923  4.567692  4.567307  4.566768  4.566075  4.565227  4.564226   \n",
-       "Y      0.026526  0.053051  0.079575  0.106096  0.132613  0.159126  0.185633   \n",
-       "\n",
-       "           7         8         9     ...      2118      2119      2120  \\\n",
-       "Rho    4.576000  4.576000  4.576000  ...  4.605555  4.611291  4.617021   \n",
-       "Alpha  0.046456  0.052263  0.058070  ...  0.154509  0.160118  0.165721   \n",
-       "X      4.571063  4.569752  4.568287  ...  4.550691  4.552305  4.553766   \n",
-       "Y      0.212505  0.239046  0.265578  ...  0.708771  0.735201  0.761641   \n",
-       "\n",
-       "           2121      2122      2123      2124      2125      2126      2127  \n",
-       "Rho    4.614935  4.620654  4.626367  4.632074  4.637775  4.643470  4.649159  \n",
-       "Alpha  0.171692  0.177281  0.182863  0.188438  0.194007  0.199569  0.205125  \n",
-       "X      4.547082  4.548234  4.549232  4.550077  4.550769  4.551307  4.551691  \n",
-       "Y      0.788460  0.814868  0.841283  0.867703  0.894127  0.920555  0.946985  \n",
-       "\n",
-       "[4 rows x 2128 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load datapath and put into dataframe\n",
     "# path to csv data\n",
     "data_path = 'DownstairsGTdata.csv'\n",
     "gt_map_df = CSV_Read_Lidar_data(data_path)\n",
     "gt_map_df = gt_map_df.astype(float)\n",
-    "gt_map_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Rho</th>\n",
-       "      <th>Alpha</th>\n",
-       "      <th>X</th>\n",
-       "      <th>Y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4.568000</td>\n",
-       "      <td>0.005807</td>\n",
-       "      <td>4.567923</td>\n",
-       "      <td>0.026526</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.568000</td>\n",
-       "      <td>0.011614</td>\n",
-       "      <td>4.567692</td>\n",
-       "      <td>0.053051</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.568000</td>\n",
-       "      <td>0.017421</td>\n",
-       "      <td>4.567307</td>\n",
-       "      <td>0.079575</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.568000</td>\n",
-       "      <td>0.023228</td>\n",
-       "      <td>4.566768</td>\n",
-       "      <td>0.106096</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4.568000</td>\n",
-       "      <td>0.029035</td>\n",
-       "      <td>4.566075</td>\n",
-       "      <td>0.132613</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1578</th>\n",
-       "      <td>4.626367</td>\n",
-       "      <td>0.182863</td>\n",
-       "      <td>4.549232</td>\n",
-       "      <td>0.841283</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1579</th>\n",
-       "      <td>4.632074</td>\n",
-       "      <td>0.188438</td>\n",
-       "      <td>4.550077</td>\n",
-       "      <td>0.867703</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1580</th>\n",
-       "      <td>4.637775</td>\n",
-       "      <td>0.194007</td>\n",
-       "      <td>4.550769</td>\n",
-       "      <td>0.894127</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1581</th>\n",
-       "      <td>4.643470</td>\n",
-       "      <td>0.199569</td>\n",
-       "      <td>4.551307</td>\n",
-       "      <td>0.920555</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1582</th>\n",
-       "      <td>4.649159</td>\n",
-       "      <td>0.205125</td>\n",
-       "      <td>4.551691</td>\n",
-       "      <td>0.946985</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1583 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Rho     Alpha         X         Y\n",
-       "0     4.568000  0.005807  4.567923  0.026526\n",
-       "1     4.568000  0.011614  4.567692  0.053051\n",
-       "2     4.568000  0.017421  4.567307  0.079575\n",
-       "3     4.568000  0.023228  4.566768  0.106096\n",
-       "4     4.568000  0.029035  4.566075  0.132613\n",
-       "...        ...       ...       ...       ...\n",
-       "1578  4.626367  0.182863  4.549232  0.841283\n",
-       "1579  4.632074  0.188438  4.550077  0.867703\n",
-       "1580  4.637775  0.194007  4.550769  0.894127\n",
-       "1581  4.643470  0.199569  4.551307  0.920555\n",
-       "1582  4.649159  0.205125  4.551691  0.946985\n",
-       "\n",
-       "[1583 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "\n",
     "# Delete any column that has an inf in the rho spot\n",
     "inf_cols = gt_map_df.loc['Rho'][np.isfinite(gt_map_df.loc['Rho'])]\n",
-    "gt_map_df = gt_map_df[inf_cols.index].transpose().reset_index(drop=True)\n",
-    "gt_map_df"
+    "gt_map_df = gt_map_df[inf_cols.index].transpose().reset_index(drop=True)"
    ]
   },
   {
@@ -656,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +353,7 @@
     }
    ],
    "source": [
-    "line_info = []\n",
+    "# Do covarience line fitting, save data to lists\n",
     "alphas = []\n",
     "rhos = []\n",
     "covars = []\n",
@@ -677,13 +362,12 @@
     "    # line_info.append([alpha, rho, C_l])\n",
     "    alphas.append(alpha)\n",
     "    rhos.append(rho)\n",
-    "    covars.append(C_l)\n",
-    "print(\"test\")\n"
+    "    covars.append(C_l)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +684,7 @@
        "[5 rows x 55 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
