--- a/sutfftosend/kalmanfilter.ipynb
+++ b/sutfftosend/kalmanfilter.ipynb
@@ -279,8 +279,11 @@
     "def matching(z_hat_t,z_t,R_t,H_j,g_thresh,P_hat_t,g):\n",
     "\n",
     "    matches = []\n",
+    "    v_t_matches = []\n",
+    "    sigmas_matches = []\n",
+    "    H_matches = []\n",
     "    #initializedng vt\n",
-    "\n",
+    "    \n",
     "    v_t = np.zeros((2,2,len(z_t),len(z_hat_t)))\n",
     "    sigma_itt = np.zeros((2,2,len(z_t),len(z_hat_t)))\n",
     "    #This could be vectorized or whatever but i think itll be okay\n",
@@ -299,8 +302,10 @@
     "            mah_dist = v_.T @ sigma_ @ v_\n",
     "            if mah_dist <= g**2:\n",
     "                matches.append([i,j])\n",
-    "    return matches\n",
-    "\n"
+    "                v_t_matches.append(v_t[:,:,i,j])\n",
+    "                sigmas_matches.append(sigma_itt[:,:,i,j])\n",
+    "                H_matches.append(H_j[j])\n",
+    "    return matches, v_t_matches, sigmas_matches,H_j"
    ]
   },
   {
@@ -309,11 +314,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pos_estimation(K_matrixs, x_hat, v_t,):\n",
+    "def pos_estimation(H_t, x_hat, v_t,P_t_hat,sigmas):\n",
     "    \n",
+    "    \n",
+    "    for i in len(x_hat):\n",
+    "        K_t = P_t_hat[i] @ H_t[i].T @ np.linalg.pinv(sigmas[i])\n",
+    "        P_t = P_t_hat[i] - K_t @ sigmas[i] @ K_t.T\n",
+    "        x_t = x_hat + K_t @ v_t[i]\n",
+    "        x_hat = x_t\n",
     "\n",
     "\n",
-    "    return"
+    "    return x_t, P_t"
    ]
   },
   {
@@ -476,6 +487,13 @@
    "source": [
     "x_hat, P_hat_t = position_prediction(pos_t_minus1, delta_sl, delta_sr, b, k_r, k_l, F_k_minus_1, Q_t)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
