--- a/sutfftosend/kalmanfilter.ipynb
+++ b/sutfftosend/kalmanfilter.ipynb
@@ -9,9 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\ian.picklo\\OneDrive - North Dakota University System\\Documents\\GitHub\\-ME580Robotics\\sutfftosend\\kalmanfilter.ipynb Cell 2\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ian.picklo/OneDrive%20-%20North%20Dakota%20University%20System/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# include libraries\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ian.picklo/OneDrive%20-%20North%20Dakota%20University%20System/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ian.picklo/OneDrive%20-%20North%20Dakota%20University%20System/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmath\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ian.picklo/OneDrive%20-%20North%20Dakota%20University%20System/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcsv\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     ]
+    }
+   ],
    "source": [
     "# include libraries\n",
     "import numpy as np\n",
@@ -30,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,16 +395,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def position_prediction(pos_t_minus1, delta_sl, delta_sr, b, k_r, k_l, F_k_minus_1, Q_t):\n",
+    "def position_prediction(pos_t_minus1, delta_sl, delta_sr, b, Q_t,P_t_minus1):\n",
     "\n",
     "    delta_sl\n",
     "    delta_sr\n",
     "    theta_t_minus1 = pos_t_minus1[2]\n",
-    "     \n",
+    "  \n",
     "    x_hat = np.empty((3,1))\n",
     "\n",
     "    # This is previous postion + estimate of future position\n",
@@ -400,13 +412,20 @@
     "                                    [(delta_sr+delta_sl) / 2 * math.sin(theta_t_minus1 + (delta_sr-delta_sl) / 2 / b)],\n",
     "                                    [(delta_sr-delta_sl) / b]])\n",
     "    \n",
-    "    # covarieance of the previouse robot state\n",
-    "    P_t_minus1 = np.array([[k_r * abs(delta_sr), 0,0],\n",
-    "                           [0, k_l * abs(delta_sl),0 ],\n",
-    "                           [0, 0, 1 ]])\n",
+    "    delta_s = (delta_sr+delta_sl)/2\n",
+    "    delta_theta = (delta_sr-delta_sl) / b\n",
+    "\n",
+    "    F_deltarl = np.array([  [.5*math.cos(theta_t_minus1+delta_theta/2)-delta_s/2/b*math.sin(theta_t_minus1+delta_theta/2),.5*math.cos(theta_t_minus1+delta_theta/2)+delta_s/2/b*math.sin(theta_t_minus1+delta_theta/2)],\n",
+    "                            [.5*math.sin(theta_t_minus1+delta_theta/2)-delta_s/2/b*math.cos(theta_t_minus1+delta_theta/2),.5*math.sin(theta_t_minus1+delta_theta/2)+delta_s/2/b*math.cos(theta_t_minus1+delta_theta/2)],\n",
+    "                            [1/b,-1/b]])\n",
+    "\n",
+    "    F_k_minus_1 = np.array([[1, 0, -delta_s*math.sin(theta_t_minus1+delta_theta/2)],\n",
+    "                            [0, 1,  delta_s*math.cos(theta_t_minus1+delta_theta/2)],\n",
+    "                            [0, 0, 1]])\n",
+    "    \n",
     "    #TODO PUT IN THE FU MATRICXZ\n",
     "    # @ is matrix multiplication\n",
-    "    P_hat_t = F_k_minus_1 @ P_t_minus1 @ F_k_minus_1.T + Q_t \n",
+    "    P_hat_t = F_k_minus_1 @ P_t_minus1 @ F_k_minus_1.T + F_deltarl@ Q_t @ F_deltarl.T\n",
     "    return x_hat, P_hat_t"
    ]
   },
@@ -426,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,12 +849,13 @@
     "k_r =  .001\n",
     "k_l =  .001\n",
     "\n",
-    "Q_t  = np.identity(3)"
+    "Q_t  = np.array([k_r*abs(delta_sr), 0]\n",
+    "                [0,k_l*abs(delta_sl) ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,14 +879,15 @@
     "pos_t_minus1 = np.array([[0],\n",
     "                         [0],\n",
     "                         [0]])\n",
-    "\n",
-    "#TODO idk wtf this is\n",
-    "F_k_minus_1 = np.identity(3)"
+    "# initialize covarience matrix TODO intiialize this beter\n",
+    "P_t_minus1 = np.array([[1,0,0],\n",
+    "                       [0,1,0],\n",
+    "                       [0,0,1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +902,7 @@
     }
    ],
    "source": [
-    "x_hat, P_hat_t = position_prediction(pos_t_minus1, delta_sl, delta_sr, b, k_r, k_l, F_k_minus_1, Q_t)\n",
+    "x_hat, P_hat_t = position_prediction(pos_t_minus1, delta_sl, delta_sr, b, Q_t,P_t_minus1)\n",
     "# print(x_hat)\n",
     "# print(P_hat_t)"
    ]
@@ -895,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1477,6 +1498,8 @@
    "source": [
     "x_t, P_t = pos_estimation(H_j, x_hat, v_t_matches, P_hat_t, sigmas_matches)\n",
     "\n",
+    "P_t_minus1 = P_t\n",
+    "pos_t_minus1 = x_t\n",
     "print(x_t)\n",
     "print(P_t)"
    ]
@@ -1498,7 +1521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
