need to fix kalman

--- a/sutfftosend/kalmanfilter.ipynb
+++ b/sutfftosend/kalmanfilter.ipynb
@@ -9,21 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 199,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\ian.picklo\\OneDrive - North Dakota University System\\Documents\\GitHub\\-ME580Robotics\\sutfftosend\\kalmanfilter.ipynb Cell 2\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ian.picklo/OneDrive%20-%20North%20Dakota%20University%20System/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# include libraries\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ian.picklo/OneDrive%20-%20North%20Dakota%20University%20System/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ian.picklo/OneDrive%20-%20North%20Dakota%20University%20System/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmath\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ian.picklo/OneDrive%20-%20North%20Dakota%20University%20System/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcsv\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# include libraries\n",
     "import numpy as np\n",
@@ -42,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,24 +312,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pos_estimation(H_t, x_hat, v_t,P_t_hat,sigmas):\n",
+    "    # print(H_t)\n",
+    "    # print(v_t)\n",
+    "    # print(sigmas)\n",
     "    for i in range(len(H_t)):\n",
     "        K_t = P_t_hat @ H_t[i].T @ np.linalg.pinv(sigmas[i])\n",
     "        P_t = P_t_hat - K_t @ sigmas[i] @ K_t.T\n",
     "        x_t = x_hat + K_t @ v_t[i]\n",
     "        x_hat = x_t\n",
     "\n",
+    "        # print(x_t)\n",
     "\n",
+    "    if range(len(H_t)) == 0:\n",
+    "        x_t = x_hat\n",
+    "        P_t = P_t_hat\n",
     "    return x_t, P_t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,11 +390,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def position_prediction(pos_t_minus1, delta_sl, delta_sr, b, Q_t,P_t_minus1):\n",
+    "def position_prediction(pos_t_minus1, delta_sl, delta_sr, b,P_t_minus1):\n",
     "\n",
     "    delta_sl\n",
     "    delta_sr\n",
@@ -415,6 +410,11 @@
     "    delta_s = (delta_sr+delta_sl)/2\n",
     "    delta_theta = (delta_sr-delta_sl) / b\n",
     "\n",
+    "    k_r =  .001\n",
+    "    k_l =  .001\n",
+    "\n",
+    "    Q_t  = np.array([[k_r * abs(delta_sr), 0],\n",
+    "                    [0, k_l * abs(delta_sl) ]])\n",
     "    F_deltarl = np.array([  [.5*math.cos(theta_t_minus1+delta_theta/2)-delta_s/2/b*math.sin(theta_t_minus1+delta_theta/2),.5*math.cos(theta_t_minus1+delta_theta/2)+delta_s/2/b*math.sin(theta_t_minus1+delta_theta/2)],\n",
     "                            [.5*math.sin(theta_t_minus1+delta_theta/2)-delta_s/2/b*math.cos(theta_t_minus1+delta_theta/2),.5*math.sin(theta_t_minus1+delta_theta/2)+delta_s/2/b*math.cos(theta_t_minus1+delta_theta/2)],\n",
     "                            [1/b,-1/b]])\n",
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
        "[5 rows x 55 columns]"
       ]
      },
-     "execution_count": 531,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,9 +825,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nThese are the uncertainties in the are error constants representing the \\nnondeterministic parameters of the motor drive and the wheel-floor interaction. Probably can be found in DOC or just tune for it\\n'"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Some values that are global\n",
     "\n",
@@ -845,17 +856,12 @@
     "\"\"\"\n",
     "These are the uncertainties in the are error constants representing the \n",
     "nondeterministic parameters of the motor drive and the wheel-floor interaction. Probably can be found in DOC or just tune for it\n",
-    "\"\"\"\n",
-    "k_r =  .001\n",
-    "k_l =  .001\n",
-    "\n",
-    "Q_t  = np.array([k_r*abs(delta_sr), 0]\n",
-    "                [0,k_l*abs(delta_sl) ])"
+    "\"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,29 +886,37 @@
     "                         [0],\n",
     "                         [0]])\n",
     "# initialize covarience matrix TODO intiialize this beter\n",
-    "P_t_minus1 = np.array([[1,0,0],\n",
-    "                       [0,1,0],\n",
-    "                       [0,0,1]])"
+    "P_t_minus1 = np.array([[.01,0,0],\n",
+    "                       [0,.01,0],\n",
+    "                       [0,0,.01]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_685522/1187815376.py:10: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "/tmp/ipykernel_728448/876036992.py:10: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  x_hat = pos_t_minus1 + np.array([[(delta_sr+delta_sl) / 2 * math.cos(theta_t_minus1 + (delta_sr-delta_sl) / 2 / b)],\n",
-      "/tmp/ipykernel_685522/1187815376.py:11: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-      "  [(delta_sr+delta_sl) / 2 * math.sin(theta_t_minus1 + (delta_sr-delta_sl) / 2 / b)],\n"
+      "/tmp/ipykernel_728448/876036992.py:11: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  [(delta_sr+delta_sl) / 2 * math.sin(theta_t_minus1 + (delta_sr-delta_sl) / 2 / b)],\n",
+      "/tmp/ipykernel_728448/876036992.py:22: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  F_deltarl = np.array([  [.5*math.cos(theta_t_minus1+delta_theta/2)-delta_s/2/b*math.sin(theta_t_minus1+delta_theta/2),.5*math.cos(theta_t_minus1+delta_theta/2)+delta_s/2/b*math.sin(theta_t_minus1+delta_theta/2)],\n",
+      "/tmp/ipykernel_728448/876036992.py:23: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  [.5*math.sin(theta_t_minus1+delta_theta/2)-delta_s/2/b*math.cos(theta_t_minus1+delta_theta/2),.5*math.sin(theta_t_minus1+delta_theta/2)+delta_s/2/b*math.cos(theta_t_minus1+delta_theta/2)],\n",
+      "/tmp/ipykernel_728448/876036992.py:26: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  F_k_minus_1 = np.array([[1, 0, -delta_s*math.sin(theta_t_minus1+delta_theta/2)],\n",
+      "/tmp/ipykernel_728448/876036992.py:27: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  [0, 1,  delta_s*math.cos(theta_t_minus1+delta_theta/2)],\n"
      ]
     }
    ],
    "source": [
-    "x_hat, P_hat_t = position_prediction(pos_t_minus1, delta_sl, delta_sr, b, Q_t,P_t_minus1)\n",
+    "x_hat, P_hat_t = position_prediction(pos_t_minus1, delta_sl, delta_sr, b,P_t_minus1)\n",
     "# print(x_hat)\n",
     "# print(P_hat_t)"
    ]
@@ -916,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1060,7 @@
        "[764 rows x 4 columns]"
       ]
      },
-     "execution_count": 536,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1397,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 537,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1460,14 +1474,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[ 0.04621548, -0.00024669],\n",
+       "        [-0.00024669,  0.01051718]]),\n",
+       " array([[0.04621548, 0.00705666],\n",
+       "        [0.00705666, 0.02457327]])]"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#TODO what is g\n",
-    "g = .5 # mess with this a bit\n",
+    "g = .3 # mess with this a bit\n",
     "\n",
-    "matches, v_t_matches, sigmas_matches, H_j = matching(z_hat_t, z_t, R_t, H_j, P_hat_t, g)"
+    "matches, v_t_matches, sigmas_matches, H_j = matching(z_hat_t, z_t, R_t, H_j, P_hat_t, g)\n",
+    "H_j\n",
+    "sigmas_matches"
    ]
   },
   {
@@ -1479,19 +1509,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'x_t' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/risl/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb Cell 31\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/risl/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb#X44sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m x_t, P_t \u001b[39m=\u001b[39m pos_estimation(H_j, x_hat, v_t_matches, P_hat_t, sigmas_matches)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/risl/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb#X44sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(x_t)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/risl/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb#X44sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(P_t)\n",
-      "\u001b[1;32m/home/risl/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb Cell 31\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/risl/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb#X44sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     x_t \u001b[39m=\u001b[39m x_hat \u001b[39m+\u001b[39m K_t \u001b[39m@\u001b[39m v_t[i]\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/risl/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb#X44sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     x_hat \u001b[39m=\u001b[39m x_t\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/risl/Documents/GitHub/-ME580Robotics/sutfftosend/kalmanfilter.ipynb#X44sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mreturn\u001b[39;00m x_t, P_t\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'x_t' referenced before assignment"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.10600478]\n",
+      " [ 0.43483838]\n",
+      " [-0.00210286]]\n",
+      "[[1.]\n",
+      " [0.]\n",
+      " [0.]]\n"
      ]
     }
    ],
@@ -1501,7 +1531,7 @@
     "P_t_minus1 = P_t\n",
     "pos_t_minus1 = x_t\n",
     "print(x_t)\n",
-    "print(P_t)"
+    "print(x_hat)\n"
    ]
   }
  ],
@@ -1521,7 +1551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
